telecom_viewer_fault
partial completed

--- a/ServletEx1/src/main/webapp/operator.html
+++ b/ServletEx1/src/main/webapp/operator.html
@@ -58,7 +58,7 @@
     <nav>
         <ul>
            
-            <li><a href="Manage fault">Manage fault</a></li>
+            <li><a href="update1">Manage fault</a></li>
             <li><a href="Update maintenance">Update maintenance</a></li>
             <li><a href="Manage Inventory">Manage Inventory </a></li>
             <li><a href="View Reports">View Reports</a></li>
