--- a/ServletEx1/src/main/webapp/page.html
+++ b/ServletEx1/src/main/webapp/page.html
@@ -137,7 +137,7 @@
             <li><a href="ManageInventory">Manage Inventory</a></li>
             <li><a href="ManageVendors">Manage Vendors</a></li>
             <li><a href="ViewReports">View Reports</a></li>
-            <li><a href="ManageFault">Manage Fault</a></li>
+            <li><a href="update">Manage Fault</a></li>
             <li><a href="index.html">Logout</a></li>
         </ul>
     </nav>
