--- a/Maintenance/src/main/webapp/Update2.html
+++ b/Maintenance/src/main/webapp/Update2.html
@@ -4,12 +4,70 @@
 <meta charset="UTF-8">
 <title>Maintenance
 </title>
+<style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: rgb(255,0, 0);
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+        }
+        nav {
+            background-color: #f4f4f4;
+            padding: 10px;
+        }
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+        nav ul li {
+            display: inline;
+            margin-right: 20px;
+        }
+        nav ul li a {
+            color: #333;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        nav ul li a:hover {
+            color: #555;
+        }
+        section {
+            padding: 20px;
+        }
+        footer {
+            background-color: rgb(0, 128, 0);
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
+<header>
+        <h1>Operator Panel</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="Mangageuser.html">Manage Users</a></li>
+            <li><a href="ManageVendors">Manage Vendors</a></li>
+            <li><a href="ManageInventory">Manage Inventory</a></li>  
+            <li><a href="ManageFault">Manage Fault</a></li>
+            <li><a href="index.html">Logout</a></li>
+        </ul>
+    </nav>
 	<h2>Maintenance Data Display</h2>
 	<form action="link" method="get">
 	
-	<input type="submit" value= "Click here">
+	<input type="submit" value= "Click here" Style="background-color: green; color: white;">
  
 	</form>
 </body>
