--- a/ServletEx2/webapp/DeleteOperator.html
+++ b/ServletEx2/webapp/DeleteOperator.html
@@ -94,10 +94,9 @@
     <nav>
         <ul>
             <li><a href="Mangageuser.html">Manage Users</a></li>
-            <li><a href="ManageInventory.html">Manage Inventory</a></li>
-            <li><a href="ManageVendors.html">Manage Vendors</a></li>
-            <li><a href="ViewReports.html">View Reports</a></li>
-            <li><a href="ManageFault.html">Manage Fault</a></li>
+             <li><a href="VendorMainPage.jsp">Manage Vendors</a></li>
+            <li><a href="ViewServletAD">Manage Inventory</a></li>
+            <li><a href="update">Manage Fault</a></li>
             <li><a href="index.html">Logout</a></li>
         </ul>
     </nav>
