--- a/ServletEx2/webapp/page.html
+++ b/ServletEx2/webapp/page.html
@@ -141,7 +141,7 @@
         </ul>
     </nav>
     <section>
-        <h1>User Registration</h1>
+        <h1 style="color:black">User Registration</h1>
         <form action="reg" method="post">
             <label for="username">Username:</label>
             <input type="text" name="username" id="username" required>
